# Boltzmann_Harminic

./: .gitmodules  CMakeLists.txt
Boltzmann_harmonic3D_OpenMP/: CMakeLists.txt  README.md
Boltzmann_harmonic3D_cuda/: CMakeLists.txt  README.md
Boltzmann_harmonic3D_cuda/cuda_wrap/: CMakeLists.txt  lbm_kokkos_harmonic3D_impl.cuh
Boltzmann_harmonic3D_cuda/include/: lbm_shared.hpp
cmake/: host_toolchain.cmake
config/: config.lua
cuda_wrap/: CMakeLists.txt  kokkos_launcher.cu  lbm_kokkos_api.cpp  lbm_kokkos_api.hpp
host_utils/: CMakeLists.txt
host_utils/src/: main.cpp
include/: configs.hpp
